--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-/apis/poi @RicardoNiepel
-/apis/trips @RicardoNiepel
-/apis/user-java @pmRz00
-/apis/userprofile @pmRz00
+/apis/poi/ @RicardoNiepel
+/apis/trips/ @RicardoNiepel
+/apis/user-java/ @pmRz00
+/apis/userprofile/ @pmRz00
