--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -26,20 +26,20 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '2.1.x'
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
-    - name: Create issue if failed
-      if: failure()
-      uses: JasonEtco/create-an-issue@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INFO: 'Max Mustermann'
-      with:
-        filename: '.github/workflows/BUILDFAILED_TEMPLATE.md'
+#    - name: Install dependencies
+#      run: dotnet restore
+#    - name: Build
+#      run: dotnet build --configuration Release --no-restore
+#    - name: Test
+#      run: dotnet test --no-restore --verbosity normal
+#    - name: Create issue if failed
+#      if: failure()
+#      uses: JasonEtco/create-an-issue@v2
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        INFO: 'Max Mustermann'
+#      with:
+#        filename: '.github/workflows/BUILDFAILED_TEMPLATE.md'
     - uses: azure/login@v1.1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
