--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -48,7 +48,7 @@ jobs:
     - name: build and publish container
       if: github.ref == 'refs/heads/master'
       run: |
-        az acr build --image "devopsoh/api-poi:${{ env.GITHUB_RUN_ID }}" --registry openhackaya6gdn9acr --file web/Dockerfile web
+        az acr build --image "devopsoh/api-poi:$GITHUB_RUN_ID" --registry openhackaya6gdn9acr --file web/Dockerfile web
     - name: deploy new image to Azure Web App
       if: github.ref == 'refs/heads/master'
       uses: azure/webapps-deploy@v2
